--- a/continut/css/stil3.css
+++ b/continut/css/stil3.css
@@ -13,12 +13,16 @@ body {
 .navbar {
     display: flex;
     flex-direction: row;
-    text-align: center;
     justify-content: space-evenly;
-    align-items: center;
     gap: 2px;
     width: 100%;
+    text-align: center;
+    align-items: center;
     background-color: #f5f4f0;
+}
+
+.navbarItem{
+    flex-shrink: 1;
 }
 
 .navbar a {
@@ -28,7 +32,6 @@ body {
     width: 20%;
     color: rgb(40, 48, 40);
     text-decoration: none;
-
 }
 
 .navbar a:hover {
@@ -352,19 +355,15 @@ body {
 }
 
 .section5box1,
-.section5box2 {
+.section5box2,
+.section5box3 {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     gap: 20px;
 }
 
-#section5box1a,
-#section5box1b,
-#section5box1c,
-#section5box2a,
-#section5box2b,
-#section5box2c {
+.section5boxItem {
     background-color: #eae2db;
     padding: 50px;
     text-align: center;
@@ -373,15 +372,23 @@ body {
     border-radius: 30px;
 }
 
+.section5boxItem:hover{
+    background-color: #3E4A3D;
+    color: white;
+}
+
 .section5box1 h3,
-.section5box2 h3 {
+.section5box2 h3,
+.section5box3 h3 {
     color: #b6927c;
 }
 
 .section5box1,
 .section5box1h3,
 .section5box2,
-.section5box2h3 {
+.section5box2h3,
+.section5box3,
+.section5box3h3 {
     text-align: center;
     color: #343333;
 }
@@ -763,16 +770,25 @@ body {
     background-color: #EAE2DB;
     border-radius: 40px;
     padding: 60px 40px;
+    margin: 0px 60px;
     text-align: center;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+    justify-content: center;
+}
 
-    width: 70%;
-    margin-left: 250px;
+#sectionCumparaturi h3 {
+    font-style: italic;
+    font-size: 30px;
+    margin-bottom: 16px;
 }
 
 #formCumparaturi {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
 }
 
 #formCumparaturi label {
@@ -782,7 +798,7 @@ body {
 
 #formCumparaturi input{
     margin:10px;
-    width: 350px;
+/*width: 350px;*/
 }
 
 #productAmount, #productName {
@@ -790,7 +806,7 @@ body {
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 14px;
-    max-width: 600px;
+    /*max-width: 600px;*/
     background-color: #fafafa;
 }
 
@@ -852,6 +868,19 @@ body {
 */
 
 /* ---------------------------------------------------------- responsive */
+@media only screen and (max-width: 930px) {
+    .navbar{
+        flex-wrap: wrap;
+    }
+    .navbarItem{
+        width: 15%;
+    }
+
+    .navbar a{
+        width: 15%;
+    }
+}
+
 @media only screen and (max-width: 620px) {
 
     .sidebar,
@@ -867,6 +896,15 @@ body {
 }
 
 @media screen and (max-width: 767px) {
+    .sidebar,
+    .navbar{
+        width: 100%;
+        float: none;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        flex: 100%;
+    }
 
     #headerContinut {
         display: flex;
@@ -941,8 +979,9 @@ body {
         flex-direction: column;
     }
 
-    #section5box1,
-    #section5box2 {
+    .section5box1,
+    .section5box2,
+    .section5box3 {
         display: flex;
         flex-direction: column;
     }
@@ -973,14 +1012,21 @@ body {
         margin: auto;
     }
 
+    #sectionCumparaturi{
+        margin: 0px 0px;
+    }
+
+    #formCumparaturi{
+        flex-direction: column;
+    }
     
 }
 
 @media screen and (min-width: 768px) {
-
     #section5a,
     #section5b,
     #section5c {
         padding: 30px;
     }
 }
+
